<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AggiungiIngredienteActivity" >

    <FrameLayout
        android:id="@+id/frameLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingrediente"
            android:textSize="35px" />
    </FrameLayout>    
    
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/frameLayout1"
        android:layout_below="@+id/frameLayout1"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tipo"
            android:textSize="30px" />

        <Spinner
            android:id="@+id/sp_ingredientType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    
    
    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_below="@+id/linearLayout1" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/coefficiente"
            android:textSize="30px" />

        <Button
            android:id="@+id/button1"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/aggiungi"
            android:textSize="25px" />

        <Button
            android:id="@+id/button2"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:text="@string/seleziona"
            android:textSize="25px" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/button2"
            android:layout_alignBottom="@+id/button2"
            android:layout_alignParentLeft="true"
            android:text="@string/valore_coefficiente"
            android:textSize="30px" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/button2"
            android:layout_alignParentLeft="true"
            android:text="@string/nome_grasso_scelto"
            android:textSize="30px" />
    </RelativeLayout>
    
    
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:weightSum="2" >


        <Button
            android:id="@+id/button4"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/salva"
            android:layout_weight="1"
            android:onClick="salvaMagazzino" />

    </LinearLayout>
    
    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignLeft="@+id/relativeLayout1"
        android:layout_below="@+id/relativeLayout1"
        android:layout_above="@+id/linearLayout2" >

       <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp" >

        <EditText
            android:id="@+id/et_nomeIng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:ems="10" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/et_nomeIng"
            android:layout_alignBottom="@+id/et_nomeIng"
            android:layout_alignParentLeft="true"
            android:text="@string/nome"
            android:textSize="30px"  />

        <EditText
            android:id="@+id/et_aliasIng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView7"
            android:layout_alignBottom="@+id/textView7"
            android:layout_alignLeft="@+id/et_nomeIng"
            android:layout_alignParentRight="true"
            android:ems="10" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView6"
            android:text="@string/alias"
            android:textSize="30px" />

        <EditText
            android:id="@+id/et_descrizioneIng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/et_aliasIng"
            android:layout_below="@+id/et_aliasIng"
            android:ems="10" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/et_descrizioneIng"
            android:layout_alignBottom="@+id/et_descrizioneIng"
            android:layout_alignParentLeft="true"
            android:text="@string/descrizione"
            android:textSize="30px" />

        <EditText
            android:id="@+id/et_costoLordoIng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/et_descrizioneIng"
            android:layout_below="@+id/et_descrizioneIng"
            android:ems="10"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/et_costoLordoIng"
            android:layout_alignBottom="@+id/et_costoLordoIng"
            android:layout_alignParentLeft="true"
            android:text="@string/costo_lordo"
            android:textSize="30px" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/et_costoNettoIng"
            android:layout_alignBottom="@+id/et_costoNettoIng"
            android:layout_alignParentLeft="true"
            android:text="@string/costo_netto"
            android:textSize="30px" />

        <EditText
            android:id="@+id/et_costoGrammoIng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/et_costoNettoIng"
            android:ems="10"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/et_costoNettoIng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/et_costoLordoIng"
            android:ems="10"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/et_costoGrammoIng"
            android:layout_alignBottom="@+id/et_costoGrammoIng"
            android:layout_alignParentLeft="true"
            android:text="@string/costo_grammo"
            android:textSize="30px" />

        <EditText
            android:id="@+id/et_pesoLordoIng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/et_costoGrammoIng"
            android:layout_below="@+id/et_costoGrammoIng"
            android:ems="10"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/et_pesoLordoIng"
            android:layout_alignBottom="@+id/et_pesoLordoIng"
            android:layout_alignParentLeft="true"
            android:text="@string/peso_lordo"
            android:textSize="30px" />

        <EditText
            android:id="@+id/et_pesoNettoIng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/et_pesoLordoIng"
            android:layout_below="@+id/et_pesoLordoIng"
            android:ems="10"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/et_pesoNettoIng"
            android:layout_alignBottom="@+id/et_pesoNettoIng"
            android:layout_alignParentLeft="true"
            android:text="@string/peso_netto"
            android:textSize="30px" />

        <EditText
            android:id="@+id/et_nomeNegozioIng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/et_pesoNettoIng"
            android:layout_below="@+id/et_pesoNettoIng"
            android:ems="10" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/et_nomeNegozioIng"
            android:layout_alignBottom="@+id/et_nomeNegozioIng"
            android:layout_alignParentLeft="true"
            android:text="@string/nome_negozio"
            android:textSize="30px" />

        <EditText
            android:id="@+id/et_noteIng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/et_nomeNegozioIng"
            android:layout_below="@+id/et_nomeNegozioIng"
            android:ems="10" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/et_noteIng"
            android:layout_alignBottom="@+id/et_noteIng"
            android:layout_alignParentLeft="true"
            android:text="@string/note"
            android:textSize="30px" />
            
    </RelativeLayout>
    </ScrollView>
    
</RelativeLayout>
